--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,5 @@
+@greenButtonColor: #58D68D;
+
 .maximizeContainer{
   width: 100%;
   height: 100%;
@@ -32,7 +34,13 @@
       .logo{
         width: 300px;
         align-items: center;
+        justify-content: center;
         display: flex;
+
+        img{
+          max-width: 250px;
+          width: 250px;
+        }
       }
 
       .form{
@@ -59,6 +67,7 @@
           padding: 0 0px 0 15px;
           border: none;
           margin-bottom: 20px;
+          outline: none;
         }
 
         .button{
@@ -78,6 +87,7 @@
           border: none;
           padding: 0 25px;
           margin-bottom: 20px;
+          outline: none;
         }
       }
     }
@@ -112,7 +122,7 @@
   bottom: 0;
   left: -350px;
   width: 300px;
-  background: #4D4D54;
+  background: white;
   z-index: 10000;
   box-shadow: -5px 0px 5px 5px;
   transition: all 0.25s ease;
@@ -122,15 +132,22 @@
   }
 
   .buttons{
-    position: absolute;
-    bottom: 0px;
+    position: fixed;
+    bottom: 25px;
     left: 0;
+    width: 300px;
     right: 0;
     height: 50px;
     line-height: 50px;
+    text-align: center;
+    opacity: 0;
+
+    &.active{
+      opacity: 1;
+    }
 
     .button{
-      width: 50%;
+      width: 250px;
       display: inline-block;
       font-weight: 700;
       font-size: 15px;
@@ -139,9 +156,10 @@
       color: white;
       border: none;
       height: 100%;
+      border-radius: 50px;
 
       &.valid{
-        background: #58D68D;
+        background: @greenButtonColor;
       }
 
       &.cancel{
@@ -152,19 +170,83 @@
 
   }
 
+  .title{
+    height: 70px;
+    display: inline-block;
+    width: 100%;
+    background: #112a56; /* Old browsers */
+    background: -moz-linear-gradient(45deg, #112a56 0%, #931c44 57%, #931c44 57%, #d3729e 100%);
+    background: -webkit-linear-gradient(45deg, #112a56 0%,#931c44 57%,#931c44 57%,#d3729e 100%);
+    background: linear-gradient(45deg, #112a56 0%,#931c44 57%,#931c44 57%,#d3729e 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#112a56', endColorstr='#d3729e',GradientType=1 );
+    color: white;
+
+    .arrow{
+      float: left;
+      height: 70px;
+      margin-right: 30px;
+      font-size: 20px;
+      margin-left: 35px;
+      cursor: pointer;
+    }
+
+    .client{
+      margin-top: 20px;
+      font-size: 16px;
+      font-weight: 700;
+    }
+
+    .lieu{
+      font-size: 15px;
+    }
+  }
+
   .fields{
 
     position: absolute;
-    bottom: 50px;
-    top: 0px;
+    bottom: 0px;
+    top: 70px;
     left: 0;
     right: 0;
     overflow-y: auto;
+    overflow-x: hidden;
+
+    &.changed{
+      bottom: 100px;
+    }
 
     .field{
-      height: 40px;
-      line-height: 50px;
       padding: 0px 10px;
+      margin: 0px 0px 0px 15px;
+
+      .label{
+        width: 100%;
+        font-weight: 700;
+        font-size: 14px;
+      }
+
+      .datetimepicker{
+        height: 40px;
+        vertical-align: text-bottom;
+        height: 25px;
+        display: inline-block;
+
+        input{
+          border-radius: 5px;
+          width: 245px;
+          border: 1px solid lightgray;
+          height: 20px;
+          padding-left: 5px;
+        }
+      }
+
+      .lat,.lng{
+        width: 109px !important;
+      }
+
+      .lat{
+        margin-right: 10px;
+      }
 
       .icon{
         width: 20px;
@@ -174,8 +256,7 @@
       .input{
         vertical-align: text-bottom;
         width: 245px;
-        margin-left: 10px;
-        border: none;
+        border: 1px solid lightgray;
         border-radius: 3px;
         height: 20px;
         padding-left: 5px;
@@ -184,8 +265,7 @@
       .select{
         vertical-align: text-bottom;
         width: 250px;
-        margin-left: 10px;
-        border: none;
+        border: 1px solid lightgray;
         border-radius: 3px;
         height: 20px;
       }
@@ -314,7 +394,7 @@
     }
 
     .edit{
-      background: #58D68D;
+      background: @greenButtonColor;
     }
 
     .remove{
@@ -322,12 +402,37 @@
     }
 
     .add{
-      background: #58D68D;
+      background: @greenButtonColor;
       min-height: 35px;
       margin-top: 15px;
       float: right;
     }
 
+  }
+
+  .configuration{
+    img{
+      width: 150px;
+      display: block;
+    }
+
+    .block{
+      padding-bottom: 15px;
+      border-bottom: 1px solid;
+    }
+
+    .upload{
+      background: @greenButtonColor;
+      border: none;;
+      border: none;
+      font-weight: 700;
+      color: white;
+      width: 150px;
+      height: 40px;
+      font-size: 15px;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
   }
 
 }
